--- a/templates/page--front.html.twig
+++ b/templates/page--front.html.twig
@@ -35,7 +35,37 @@
   </div>
 {% endif %}
 </div>  
-</header>    
+</header>
+    <div class="hero-image">
+      <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="themes/custom/nextg/images/slideshow/slide-01.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Drupal 8 Theme</h1>
+              <p class="lead">Next Generation Free Responsive Drupal 8 Theme</p>
+              <a href="#features" data-scroll="true" class="btn btn-light-out">Features</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="themes/custom/nextg/images/slideshow/slide-02.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Drupal 8 Theme</h1>
+              <p class="lead">Next Generation Free Responsive Drupal 8 Theme</p>
+              <a href="#features" data-scroll="true" class="btn btn-light-out">Features</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div><!-- /.carousel -->
+    </div>
 <div class="main-container container">          
 <div class="row">
   {# Sidebar First #}
